--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
