--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_auth: ^4.2.5
   equatable: ^2.0.5
   flutter_bloc: ^8.1.1
+  bloc: ^8.1.0
+  meta: ^1.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
