--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   bloc: ^8.1.0
   meta: ^1.8.0
+  cached_network_image: ^3.2.3
+  email_validator: ^2.1.17
 
 
   # The following adds the Cupertino Icons font to your application.
