--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   meta: ^1.8.0
   cached_network_image: ^3.2.3
   email_validator: ^2.1.17
+  firebase_auth_mocks: ^0.10.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,6 +49,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+  bloc_test: ^9.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
